Bug 1871151 - Backport xsimd dispatch mechanism fix r=gcp

See upstream https://github.com/xtensor-stack/xsimd/commit/bc29d96401b8c3cb8b120d392bc5b7ce494ff1f4

Differential Revision: https://phabricator.services.mozilla.com/D197165