third_party/xsimd/include/xsimd/types/xsimd_generic_arch.hpp
@@ -43,6 +43,10 @@ namespace xsimd
     protected:
         static constexpr unsigned version(unsigned major, unsigned minor, unsigned patch, unsigned multiplier = 100u) noexcept { return major * multiplier * multiplier + minor * multiplier + patch; }
     };
+
+    struct unsupported
+    {
+    };
 }
 
 #endif
