third_party/xsimd/include/xsimd/types/xsimd_rvv_register.hpp
@@ -411,6 +411,8 @@ namespace xsimd
             using type = detail::rvv_bool_simd_register<T>;
         };
     } // namespace types
+#else
+    using rvv = detail::rvv<0xFFFFFFFF>;
 #endif
 } // namespace xsimd
 
